2009-04-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10761: Searching for specific record opens "edit record" in wrong frame

2009-04-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10837: htmlARea RTE: IE8 reports unknown "complete" attribute on img nodes
	* Fixed bug #10836: htmlARea RTE: RTE leaves unwanted id attribute on inserted table in IE8
	* Fixed bug #10844: htmlArea RTE: IE8 creates erroneous ranges when selection is empty
	* Updated htmlArea RTE version to 1.7.10

2009-04-03  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10838: t3lib_cs->utf8_decode() does not check whether the target charset is utf8

2009-04-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10834: htmlArea RTE: IE8 now uses standard name for DOM class attribute
	* Fixed issue #10747: htmlArea RTE: Inserting a table in IE8 may fail

2009-03-31  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #10567: Added IE8+ support / Get rid of browser version dependent t3lib_div::clientInfo() (Thanks to Steffen Gebert)

2009-03-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10431: Call to undefined method SC_wizard_list::printContent()

2009-03-27  Francois Suter  <francois@typo3.org>

	* Fixed issue #10798: Flag sectionIndex is not used for "menu of subpages + sections" (thanks to Xaviers Perseguers)

2009-03-26  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10768: Small rendering/css bug on FE with Text	with image

2009-03-26  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #10723: ambigious description of the 'lifetime' option in installtool (thanks to Dan Osipov)

2009-03-23  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10410: Generation of encryption key does not work in IE7 (thanks to Steffen Muller)

2009-03-21  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10663: felogin - Invalid XHTML Code in logout form (thanks to Stano Paska)

2009-03-20  Oliver Hader  <oliver@typo3.org>
