@@ -1,3 +1,7 @@
+2009-04-05  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #10203: RTE does not work in TemplaVoila FCE Section
+
 2009-04-03  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed issue #10837: htmlARea RTE: IE8 reports unknown "complete" attribute on img nodes
