@@ -1,3 +1,7 @@
+2009-04-05  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #10203: RTE does not work in TemplaVoila FCE Section
+
 2009-04-04  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #10761: Searching for specific record opens "edit record" in wrong frame
